--- a/ConcurrentTaskProcessor/ConcurrentTaskProcessor.vcxproj.filters
+++ b/ConcurrentTaskProcessor/ConcurrentTaskProcessor.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="ConcurrentTaskProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CorruptedThread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CorruptedThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
