--- a/ConcurrentTaskProcessor/ConcurrentTaskProcessor.vcxproj.filters
+++ b/ConcurrentTaskProcessor/ConcurrentTaskProcessor.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="CorruptedThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FixedThread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CorruptedThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FixedThread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
